--- a/docs/Internals/1.nanoFrameworkInternals.md
+++ b/docs/Internals/1.nanoFrameworkInternals.md
@@ -3,7 +3,5 @@ layout: default
 title: nanoFramework Internals
 nav_order: 3
 has_children: true
-permalink: /docs/Hardware
-
+permalink: /docs/Internals
 ---
-
