--- a/docs/Hardware/50. STM32.md
+++ b/docs/Hardware/50. STM32.md
@@ -5,6 +5,17 @@ parent: Electronics Hardware
 nav_order: 50
 ---
 
+
+
+<details open markdown="block">
+  <summary>
+    Table of contents
+  </summary>
+  {: .no_toc .text-delta }
+1. TOC
+{:toc}
+</details>
+
 # STM32
 
 |                                                              |                                                              |      | Notes                 |     RTOS      |
@@ -12,6 +23,8 @@ nav_order: 50
 | [**STM32F769IDISCOVERY**](https://www.st.com/en/evaluation-tools/32f769idiscovery.html) | ![image-20230623140858130](assets/image-20230623140858130.png) |      | Cortex M7 <br/>216MHz |    Chibios    |
 | **[STM32H735G-DK](https://www.st.com/en/evaluation-tools/stm32h735g-dk.html)** | ![image-20230623141627600](assets/image-20230623141627600.png) |      | Cortex M7 <br/>550MHz | Azure/Threadx |
 | [**STM32H7B3I-DK**](https://www.st.com/en/evaluation-tools/stm32h7b3i-dk.html) | ![image-20230623142900780](assets/image-20230623142900780.png) |      | Cortex M7 <br/>280Mhz | Azure/Threadx |
+
+
 
 
 
